# ecommerce-back

./: README.md  main.py  pyproject.toml
app/connection/: database.py
app/controllers/: category_controller.py  product_controller.py  role_controller.py  subcategory_controller.py  user_controller.py
app/models/: category_model.py  product_model.py  role_model.py  subcategory_model.py  user_model.py
app/repositories/: category_repository.py  product_repository.py  role_repository.py  subcategory_repository.py  user_repository.py
app/services/: category_service.py  product_service.py  role_service.py  subcategory_service.py  user_service.py
app/utils/: jwt_middleware.py  openapi_schema.py  settings.py
